# GoodBoy-VendingMachineKata

./: README.md  license.txt
c/: CMakeLists.txt
c/src/: CMakeLists.txt  vending_machine.c  vending_machine.h  vending_machine_printer.c  vending_machine_printer.h
c/test-catch2/: CMakeLists.txt  main.cpp  printer_catch.VendingMachinePrinter.format_array_of_coins.approved.txt  printer_catch.VendingMachinePrinter.format_array_of_coins_on_line.approved.txt  printer_catch.VendingMachinePrinter.format_several_lines.approved.txt  printer_catch.cpp  vending_machine_catch.cpp
c/test-gtest/: CMakeLists.txt  main.cpp  vending_machine_gtest.cpp
cpp/: CMakeLists.txt
cpp/src/: CMakeLists.txt  VendingMachine.cpp  VendingMachine.h  VendingMachinePrinter.cpp  VendingMachinePrinter.h
cpp/test-catch2/: CMakeLists.txt  insert_coins_catch2.cpp  printer_catch2.cpp
cpp/test-gtest/: CMakeLists.txt  VendingMachineTest.h  insert_coins_gtest.cpp  main.cpp
csharp/: VendingMachine-Approval-Kata.sln
csharp/VendingMachine-Approval-Kata/: README.md  VendingMachine-Approval-Kata.csproj  VendingMachine.cs  VendingMachine_v2.cs  VendingMachine_v3.cs  VendingMachine_v4.cs
csharp/VendingMachineTests/: VendingMachineNUnitTest.cs  VendingMachinePrinter.cs  VendingMachineTests.csproj  VendingMachineXUnitTest.cs
java/: build.gradle  pom.xml
python/: test_vending_machine.py  vending_machine.py  vending_machine_printer.py
python-texttest/: README.md  config.vending  step_definitions.py  test_rig.py  vending_machine.py  vending_machine_printer.py
(+3 files in other folders)
